<resources>
    <string name="app_name">Подписка</string>
    <string name="userName">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="buttonOk">Ок</string>
    <string name="buttonClear">Очистить</string>
    <string name="placeholderName">Введите имя</string>
    <string name="placeholderEmail">Введите почту</string>
    <string name="alertInfoUserName">\"Подписка на рассылку успешно оформлена для пользователя \"</string>
    <string name="alertInfoUserEmail">\" на электронный адрес \"</string>
</resources>
